--- a/rust-wasm/Cargo.toml
+++ b/rust-wasm/Cargo.toml
@@ -7,6 +7,12 @@ version = "0.1.0"
 crate-type = ["cdylib"]
 
 [dependencies]
-console_log = "0.2.0"
-js-sys = "0.3.61"
+console_error_panic_hook = {version = "0.1.6", optional = true}
 wasm-bindgen = "0.2.84"
+
+[features]
+default = ["console_error_panic_hook"]
+
+[profile.release]
+# Tell `rustc` to optimize for small code size.
+opt-level = "s"
